commit to checkout lamDev

--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://res.cloudinary.com/di6hi1r0g/image/upload/v1748582429/z6652986046151_c5b2b5d42778ea78c6b4c3ad7a01fbab_gd14jx.jpg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React SWP391S</title>
+    <title>Infertility Treatment Management and Monitoring System</title>
   </head>
   <body>
     <div id="root"></div>
