--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://res.cloudinary.com/di6hi1r0g/image/upload/v1748582429/z6652986046151_c5b2b5d42778ea78c6b4c3ad7a01fbab_gd14jx.jpg"
+      href="https://res.cloudinary.com/di6hi1r0g/image/upload/v1748665959/icon_pch2gc.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Infertility Treatment Management and Monitoring System</title>
